--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,17 @@ dist
 server/public
 vite.config.ts.*
 *.tar.gzattached_assets/bookstores-445420-96ecb1af4f16.json
+
+# Environment variables and credentials
+.env
+.env.local
+.env.*.local
+*.json
+!package.json
+!package-lock.json
+!tsconfig.json
+!components.json
+!drizzle.config.ts
+!postcss.config.js
+!tailwind.config.ts
+!vercel.json
