--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.3",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
@@ -75,6 +76,7 @@
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.6.0",
     "recharts": "^2.15.2",
+    "rollup": "^4.53.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
@@ -109,6 +111,7 @@
     "vite": "^5.4.14"
   },
   "optionalDependencies": {
+    "@rollup/rollup-darwin-arm64": "4.53.2",
     "bufferutil": "^4.0.8"
   }
 }
