Add comprehensive error logging and improve spacing/UX
- Add centralized error logging across all pages and components
  - Replace console.log/error with logger utility
  - Add error handling with context to catch blocks
  - Add React Query error handlers with useEffect
  - Add error logging to hooks (useEvents, useBookstores)
  - Add error logging to queryClient and hydration utilities

- Improve Events page UX
  - Conditionally show CTA section only when events exist
  - Reduce redundant CTAs on empty state

- Reduce excessive padding on large screens
  - Remove lg: breakpoint scaling for padding/spacing
  - Update Home, About, and Events pages
  - Stop padding scaling at md breakpoint for better content density

- Fix ads.txt file for Google AdSense
  - Remove trailing blank line
  - Add explicit route in vercel.json with correct content-type header

--- a/vercel.json
+++ b/vercel.json
@@ -23,6 +23,11 @@
       "dest": "/api/sitemap.js"
     },
     {
+      "src": "/ads.txt",
+      "headers": { "content-type": "text/plain" },
+      "continue": true
+    },
+    {
       "src": "/api/health",
       "dest": "/api/health.js"
     },
