Clean up remaining files from documentation reorganization
- Update .gitignore formatting
- Remove misplaced .tsx files from public directory

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@ dist
 .DS_Store
 server/public
 vite.config.ts.*
-*.tar.gzattached_assets/bookstores-445420-96ecb1af4f16.json
+*.tar.gz
+attached_assets/
 
 # Environment variables and credentials
 .env
