--- a/package.json
+++ b/package.json
@@ -48,20 +48,21 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "compression": "^1.8.1",
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.2",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
-    "express-rate-limit": "^7.4.1",
-    "isomorphic-dompurify": "^2.11.0",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.4.1",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
     "googleapis": "^148.0.0",
     "input-otp": "^1.4.2",
+    "isomorphic-dompurify": "^2.11.0",
     "lucide-react": "^0.453.0",
     "mapbox-gl": "^3.12.0",
     "memorystore": "^1.6.7",
