Fix sitemap: Remove old directory URLs, add meta robots tags, improve indexing

--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-router-dom": "^7.6.0",
     "recharts": "^2.15.2",
     "rollup": "^4.53.2",
+    "sitemap": "^9.0.0",
     "supercluster": "^8.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
