--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
+    "@types/compression": "^1.8.1",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/dompurify": "^3.0.5",
     "@types/express": "4.17.21",
