--- a/package.json
+++ b/package.json
@@ -113,10 +113,12 @@
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.30.4",
     "esbuild": "^0.25.0",
+    "next": "^16.0.5",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.1",
     "typescript": "5.6.3",
+    "vercel": "^48.12.0",
     "vite": "^5.4.14"
   },
   "optionalDependencies": {
