--- a/vercel.json
+++ b/vercel.json
@@ -36,6 +36,10 @@
       "dest": "/api/serverless.js"
     },
     {
+      "src": "/bookshop/(.*)",
+      "dest": "/api/bookshop/$1"
+    },
+    {
       "src": "/(assets|images|fonts|css|js)/.*",
       "headers": { "cache-control": "public, max-age=31536000, immutable" },
       "continue": true
