Fix Edge Function: Convert to JS and fix route order
- Convert TypeScript to JavaScript for better Vercel compatibility
- Fix route order: /bookshop/* must come before /api/* catch-all
- Add negative lookahead to API route to exclude /api/bookshop/*
- Add debug logging to help troubleshoot

--- a/vercel.json
+++ b/vercel.json
@@ -32,12 +32,12 @@
       "dest": "/api/health.js"
     },
     {
-      "src": "/api/(.*)",
-      "dest": "/api/serverless.js"
-    },
-    {
       "src": "/bookshop/(.*)",
       "dest": "/api/bookshop/$1"
+    },
+    {
+      "src": "/api/(?!bookshop)(.*)",
+      "dest": "/api/serverless.js"
     },
     {
       "src": "/(assets|images|fonts|css|js)/.*",
