--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
       "use": "@vercel/node"
     },
     {
+      "src": "api/bookshop/[slug].js",
+      "use": "@vercel/edge"
+    },
+    {
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
