--- a/vercel.json
+++ b/vercel.json
@@ -33,7 +33,7 @@
     },
     {
       "src": "/bookshop/(.*)",
-      "dest": "/api/bookshop/$1"
+      "dest": "/api/bookshop-slug?slug=$1"
     },
     {
       "src": "/api/(?!bookshop)(.*)",
