Improve slug extraction: Check Vercel headers and multiple sources
- Check x-vercel-original-path header for original URL
- Fallback to query parameter, pathname, and referer header
- Better logging for debugging slug extraction

--- a/vercel.json
+++ b/vercel.json
@@ -33,7 +33,7 @@
     },
     {
       "src": "/bookshop/([^/]+)",
-      "dest": "/api/bookshop-slug?slug=$1"
+      "dest": "/api/bookshop-slug"
     },
     {
       "src": "/api/(?!bookshop)(.*)",
