Fix route rewrite to pass slug as query parameter
- Update vercel.json route to include slug in query: ?slug=$1
- Simplify slug extraction in Edge Function to prioritize query parameter
- This ensures all /bookshop/* routes are handled generically

--- a/vercel.json
+++ b/vercel.json
@@ -32,8 +32,8 @@
       "dest": "/api/health.js"
     },
     {
-      "src": "/bookshop/([^/]+)",
-      "dest": "/api/bookshop-slug"
+      "src": "/bookshop/(.*)",
+      "dest": "/api/bookshop-slug?slug=$1"
     },
     {
       "src": "/api/(?!bookshop)(.*)",
