Use dynamic route structure for Edge Function
- Move from api/bookshop-slug.js to api/bookshop/[slug].js
- Vercel auto-detects [slug].js as dynamic route
- Update route rewrite to /api/bookshop/$1
- Simplify slug extraction from pathname
- This should fix Edge Function not being invoked

--- a/vercel.json
+++ b/vercel.json
@@ -33,7 +33,7 @@
     },
     {
       "src": "/bookshop/(.*)",
-      "dest": "/api/bookshop-slug"
+      "dest": "/api/bookshop/$1"
     },
     {
       "src": "/api/(?!bookshop)(.*)",
