--- a/vercel.json
+++ b/vercel.json
@@ -40,9 +40,12 @@
       "dest": "/api/serverless.js"
     },
     {
-      "src": "/(assets|images|fonts|css|js)/.*",
+      "src": "/(assets|images|fonts|css|js|favicon|apple-touch-icon)/.*",
       "headers": { "cache-control": "public, max-age=31536000, immutable" },
       "continue": true
+    },
+    {
+      "handle": "filesystem"
     },
     {
       "src": "/(.*)",
