Convert Edge Function to Node.js serverless function
- Change from Edge Function to Node.js serverless function
- Move from api/bookshop/[slug].js to api/bookshop-slug.js
- Update handler to use Express-style req/res instead of Request/Response
- Add explicit build entry in vercel.json
- Use query parameter for slug from route rewrite
- This should be more reliable than Edge Functions

--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
       "use": "@vercel/node"
     },
     {
+      "src": "api/bookshop-slug.js",
+      "use": "@vercel/node"
+    },
+    {
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
@@ -33,7 +37,7 @@
     },
     {
       "src": "/bookshop/(.*)",
-      "dest": "/api/bookshop/$1"
+      "dest": "/api/bookshop-slug?slug=$1"
     },
     {
       "src": "/api/(?!bookshop)(.*)",
