Fix route rewrite and ensure Supabase is used
- Change route from /api/bookshop-slug?slug=$1 to /api/bookshop-slug
- Update negative lookahead to exclude bookshop-slug from serverless.js
- Improve slug extraction to check Vercel headers first
- Function already uses Supabase REST API (not Google Sheets)
- This should route requests correctly to bookshop-slug function

--- a/vercel.json
+++ b/vercel.json
@@ -37,10 +37,10 @@
     },
     {
       "src": "/bookshop/(.*)",
-      "dest": "/api/bookshop-slug?slug=$1"
+      "dest": "/api/bookshop-slug"
     },
     {
-      "src": "/api/(?!bookshop)(.*)",
+      "src": "/api/(?!bookshop-slug)(.*)",
       "dest": "/api/serverless.js"
     },
     {
