Add x-vercel-original-path header to route rewrite
- Add header to preserve original path in route rewrite
- This should help the function extract the slug correctly
- Route rewrite should now pass original path to function

--- a/vercel.json
+++ b/vercel.json
@@ -37,7 +37,10 @@
     },
     {
       "src": "/bookshop/(.*)",
-      "dest": "/api/bookshop-slug"
+      "dest": "/api/bookshop-slug",
+      "headers": {
+        "x-vercel-original-path": "/bookshop/$1"
+      }
     },
     {
       "src": "/api/(?!bookshop-slug)(.*)",
