Fix ads.txt discoverability with dedicated API route
- Create api/ads-txt.js serverless function to serve ads.txt reliably
- Update vercel.json to route /ads.txt to API function instead of filesystem
- Add proper caching headers and error handling
- Ensure ads.txt is always accessible for Google AdSense verification

Security: File paths are hardcoded, no user input, only GET requests allowed
Performance: Minimal overhead, proper caching (1 hour)
Breaking: None - URL remains /ads.txt, more reliable routing

--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
       "use": "@vercel/node"
     },
     {
+      "src": "api/ads-txt.js",
+      "use": "@vercel/node"
+    },
+    {
       "src": "api/bookshop-slug.js",
       "use": "@vercel/node"
     },
@@ -28,8 +32,7 @@
     },
     {
       "src": "/ads.txt",
-      "headers": { "content-type": "text/plain" },
-      "continue": true
+      "dest": "/api/ads-txt.js"
     },
     {
       "src": "/api/health",
