CRITICAL FIX: Correct Vercel route destination for bookshop-slug function
- Change route destination from /api/bookshop-slug to /api/bookshop-slug.js
- Matches pattern used by other API routes (sitemap.js, ads-txt.js)
- This ensures Vercel properly routes /bookshop/* requests to the function
- Reduce cache time temporarily to 60s for testing (was 3600s)
- Fixes issue where meta tags weren't being injected due to function not being invoked

--- a/vercel.json
+++ b/vercel.json
@@ -40,7 +40,7 @@
     },
     {
       "src": "/bookshop/(.*)",
-      "dest": "/api/bookshop-slug",
+      "dest": "/api/bookshop-slug.js",
       "headers": {
         "x-vercel-original-path": "/bookshop/$1"
       }
