Improve error handling and logging for meta tag injection
- Fix rewrite pattern: use :slug instead of :slug* for single segment
- Add comprehensive logging throughout function execution
- Improve HTML validation before injection
- Better error messages to diagnose issues
- Add verification that meta tags were actually injected
- Improve base HTML fetching with validation

--- a/vercel.json
+++ b/vercel.json
@@ -27,7 +27,7 @@
   ],
   "rewrites": [
     {
-      "source": "/bookshop/:slug*",
+      "source": "/bookshop/:slug",
       "destination": "/api/bookshop-slug?slug=:slug"
     }
   ],
