Fix invalid route pattern in vercel.json
- Wrap negative lookahead in a group as required by path-to-regexp
- Change /api/(?!bookshop-slug)(.*) to /api/((?!bookshop-slug).*)

--- a/vercel.json
+++ b/vercel.json
@@ -45,7 +45,7 @@
       "dest": "/api/health.js"
     },
     {
-      "src": "/api/(?!bookshop-slug)(.*)",
+      "src": "/api/((?!bookshop-slug).*)",
       "dest": "/api/serverless.js"
     },
     {
