Fix route pattern: add explicit bookshop-slug route and use simple catch-all
- Add explicit route for /api/bookshop-slug before catch-all
- Use simple /api/:path* pattern instead of negative lookahead
- Routes are matched in order, so specific routes take precedence

--- a/vercel.json
+++ b/vercel.json
@@ -45,7 +45,11 @@
       "dest": "/api/health.js"
     },
     {
-      "src": "/api/((?!bookshop-slug).*)",
+      "src": "/api/bookshop-slug",
+      "dest": "/api/bookshop-slug.js"
+    },
+    {
+      "src": "/api/:path*",
       "dest": "/api/serverless.js"
     },
     {
