Fix route pattern: replace regex (.*) with path-to-regexp :path*
- Change /(.*) to /:path* for catch-all route
- This uses proper path-to-regexp syntax instead of regex

--- a/vercel.json
+++ b/vercel.json
@@ -91,7 +91,7 @@
       "handle": "filesystem"
     },
     {
-      "src": "/(.*)",
+      "src": "/:path*",
       "dest": "/index.html"
     }
   ],
