Fix all route patterns: use (.*) instead of :path* for path-to-regexp compatibility
- Replace /api/:path* with /api/(.*)
- Replace /:path* with /(.*) for catch-all
- Replace all /assets/:path*, /images/:path*, etc. with (.*) syntax
- This should resolve the invalid route pattern error

--- a/vercel.json
+++ b/vercel.json
@@ -49,31 +49,31 @@
       "dest": "/api/bookshop-slug.js"
     },
     {
-      "src": "/api/:path*",
+      "src": "/api/(.*)",
       "dest": "/api/serverless.js"
     },
     {
-      "src": "/assets/:path*",
+      "src": "/assets/(.*)",
       "headers": { "cache-control": "public, max-age=31536000, immutable" },
       "continue": true
     },
     {
-      "src": "/images/:path*",
+      "src": "/images/(.*)",
       "headers": { "cache-control": "public, max-age=31536000, immutable" },
       "continue": true
     },
     {
-      "src": "/fonts/:path*",
+      "src": "/fonts/(.*)",
       "headers": { "cache-control": "public, max-age=31536000, immutable" },
       "continue": true
     },
     {
-      "src": "/css/:path*",
+      "src": "/css/(.*)",
       "headers": { "cache-control": "public, max-age=31536000, immutable" },
       "continue": true
     },
     {
-      "src": "/js/:path*",
+      "src": "/js/(.*)",
       "headers": { "cache-control": "public, max-age=31536000, immutable" },
       "continue": true
     },
@@ -91,7 +91,7 @@
       "handle": "filesystem"
     },
     {
-      "src": "/:path*",
+      "src": "/(.*)",
       "dest": "/index.html"
     }
   ],
