Fix: Add catch-all rewrite for React app client-side routing
- Add rewrite for /(.*) to /index.html
- This serves the React app for all non-API routes
- Fixes 404 errors on bookshop detail pages
- Required for client-side routing to work

--- a/vercel.json
+++ b/vercel.json
@@ -49,6 +49,10 @@
     {
       "source": "/api/:path*",
       "destination": "/api/serverless.js"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
