CRITICAL FIX: Fix blank page issue on direct bookshop URLs
- Fix rewrite syntax: use $slug instead of :slug in destination
- Load script paths early for use in all error handlers
- Replace all hardcoded /assets/index.js with correct script paths
- Add extensive logging to debug blank page issue
- Ensure function always returns HTML (never empty response)
- Add HTML length validation before sending
- Better error handling to prevent silent failures

--- a/vercel.json
+++ b/vercel.json
@@ -28,7 +28,7 @@
   "rewrites": [
     {
       "source": "/bookshop/:slug",
-      "destination": "/api/bookshop-slug?slug=:slug"
+      "destination": "/api/bookshop-slug?slug=$slug"
     },
     {
       "source": "/sitemap.xml",
