Add /bookstore/:id redirect to vercel.json
- Add rewrite rule to redirect /bookstore/:id to /bookshop/:id
- This ensures legacy bookstore URLs work on Vercel
- Fixes test failure for /bookstore/123 redirect

--- a/vercel.json
+++ b/vercel.json
@@ -27,6 +27,10 @@
   ],
   "rewrites": [
     {
+      "source": "/bookstore/:id",
+      "destination": "/bookshop/$id"
+    },
+    {
       "source": "/bookshop/:slug",
       "destination": "/api/bookshop-slug?slug=$slug"
     },
