CRITICAL FIX: Extract slug from URL path when rewrite passes literal $slug
- Fix vercel.json rewrite to use :slug instead of $slug
- Add fallback to extract slug from URL path when query has literal $slug
- This fixes the issue where rewrite was passing $slug as literal string
- Now correctly extracts 'river-bend-book-truck' from /bookshop/river-bend-book-truck

--- a/vercel.json
+++ b/vercel.json
@@ -31,8 +31,8 @@
       "destination": "/bookshop/$id"
     },
     {
-      "source": "/bookshop/:slug",
-      "destination": "/api/bookshop-slug?slug=$slug"
+      "source": "/bookshop/:slug*",
+      "destination": "/api/bookshop-slug?slug=:slug"
     },
     {
       "source": "/sitemap.xml",
