--- a/vercel.json
+++ b/vercel.json
@@ -36,7 +36,7 @@
     },
     {
       "source": "/sitemap.xml",
-      "destination": "/api/sitemap.js"
+      "destination": "/api/sitemap"
     },
     {
       "source": "/ads.txt",
