Fix sitemap: remove initialization wait loop and add debug logging
- Removed problematic wait loop that could cause timeouts
- Added extensive debug logging to track function execution
- Removed redundant rewrite rule

The wait loop was potentially causing the function to timeout before responding.

--- a/vercel.json
+++ b/vercel.json
@@ -51,6 +51,10 @@
       "destination": "/api/bookshop-slug.js"
     },
     {
+      "source": "/api/sitemap.js",
+      "destination": "/api/sitemap.js"
+    },
+    {
       "source": "/api/:path*",
       "destination": "/api/serverless.js"
     }
