Add automated Google Places photo refresh system
- Add Vercel cron job to refresh photos every 2 months
- Add GitHub Actions workflow as backup refresh mechanism
- Update enrichment script to support --refresh-all flag
- Add documentation for photo refresh strategy
- Photos will now automatically refresh before expiration (2-3 months)

This prevents photo references from expiring and causing 400 errors.

--- a/vercel.json
+++ b/vercel.json
@@ -18,6 +18,10 @@
       "use": "@vercel/node"
     },
     {
+      "src": "api/cron/refresh-google-photos.js",
+      "use": "@vercel/node"
+    },
+    {
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
@@ -49,6 +53,10 @@
     {
       "source": "/api/bookshop-slug",
       "destination": "/api/bookshop-slug.js"
+    },
+    {
+      "source": "/api/cron/:path*",
+      "destination": "/api/cron/$path.js"
     },
     {
       "source": "/api/:path*",
@@ -131,5 +139,11 @@
   ],
   "env": {
     "NODE_ENV": "production"
-  }
+  },
+  "crons": [
+    {
+      "path": "/api/cron/refresh-google-photos",
+      "schedule": "0 2 1 */2 *"
+    }
+  ]
 }
