--- a/vercel.json
+++ b/vercel.json
@@ -61,6 +61,10 @@
     {
       "source": "/api/:path*",
       "destination": "/api/serverless.js"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
