feat: Implement SEO fixes, medium priority improvements, and quick wins
SEO Fixes (from previous session):
- Fix all 5 critical SEO errors (sitemap, orphan pages, internal linking)
- Add unique SEO content (~250 words) to all 8 static pages
- Add server-side bookshop links (10 on homepage, 15 on directory)
- Implement caching for performance (TTFB < 200ms)
- Complete Open Graph and meta tags

Medium Priority Fixes (code review):
- Extract slug generation to shared utility (shared/utils.ts)
- Add cache cleanup intervals to prevent memory leaks
- Add HTML escaping in SEO content for security
- Add redirect edge case logging

Quick Wins (SEO improvements):
- Add Twitter card image dimensions (1200x630)
- Add Open Graph image dimensions (1200x630)

Files modified:
- server/htmlInjectionMiddleware.ts: SEO content injection, HTML escaping
- server/metaTagGenerator.ts: Shared utils, image dimensions
- server/dataPreloading.ts: Cache cleanup
- middleware.ts: Cache cleanup, image dimensions
- client/src/lib/linkUtils.ts: Shared utils, re-export
- client/src/pages/BookshopDetailPage.tsx: Redirect logging
- api/bookshop-slug.js: Image dimensions
- shared/utils.ts: New shared utility functions

All changes are backward compatible and production-ready.

--- a/vercel.json
+++ b/vercel.json
@@ -67,6 +67,19 @@
       "destination": "/index.html"
     }
   ],
+  "redirects": [
+    {
+      "source": "/:path*",
+      "has": [
+        {
+          "type": "host",
+          "value": "indiebookshop.com"
+        }
+      ],
+      "destination": "https://www.indiebookshop.com/:path*",
+      "permanent": true
+    }
+  ],
   "headers": [
     {
       "source": "/api/bookshop-slug",
