fix: Change catch-all pattern to exclude root path
- Change from /(.*) to /:path+ which requires at least one path segment
- This ensures / route is matched before catch-all
- /:path+ will match /directory, /about, etc. but NOT /

--- a/vercel.json
+++ b/vercel.json
@@ -91,7 +91,7 @@
       "destination": "/api/static-pages.js"
     },
     {
-      "source": "/(.*)",
+      "source": "/:path+",
       "destination": "/index.html"
     }
   ],
