Fix: Ensure homepage routes to static-pages.js function
- Move / route earlier in rewrite rules
- Add /index.html rewrite to catch direct index.html requests
- This ensures homepage goes through serverless function for SEO injection

--- a/vercel.json
+++ b/vercel.json
@@ -67,6 +67,14 @@
       "destination": "/api/serverless.js"
     },
     {
+      "source": "/",
+      "destination": "/api/static-pages.js"
+    },
+    {
+      "source": "/index.html",
+      "destination": "/api/static-pages.js"
+    },
+    {
       "source": "/directory",
       "destination": "/api/static-pages.js"
     },
@@ -84,10 +92,6 @@
     },
     {
       "source": "/blog",
-      "destination": "/api/static-pages.js"
-    },
-    {
-      "source": "/",
       "destination": "/api/static-pages.js"
     },
     {
