Fix: Add explicit route for /api/static-pages.js
- Add specific rewrite rule for /api/static-pages before the catch-all /api/:path*
- This ensures /api/static-pages.js routes directly to the function instead of going through serverless.js
- Should fix Edge Middleware fetch to static-pages.js

--- a/vercel.json
+++ b/vercel.json
@@ -59,6 +59,10 @@
       "destination": "/api/bookshop-slug.js"
     },
     {
+      "source": "/api/static-pages",
+      "destination": "/api/static-pages.js"
+    },
+    {
       "source": "/api/cron/:path*",
       "destination": "/api/cron/$path.js"
     },
